--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
-              <span>12</span>
+              <span class="favorites-count">12</span>
             </a>
           </li>
           <li class="navigation-item">
