--- a/index.html
+++ b/index.html
@@ -37,6 +37,54 @@
         </ul>
       </nav>
     </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
+      <img src="#" alt="Логотип: Welcome to the gorgeous Sedona. Because the Grand Canyon sucks.">
+      <p class="promo-tagline">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <!-- Add class to p below -->
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <ol class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-item-heading">Настоящий городок</h3>
+            <p class="advantages-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="#" alt="Городок Седона: двухэтажные здания.">
+            <ul class="advantages-sublist">
+              <li class="advantages-sublist-item">
+                <h4 class="advantages-sublist-heading">Жильё</h4>
+                <p class="advantages-sublist-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="advantages-sublist-item">
+                <h4 class="advantages-sublist-heading">Еда</h4>
+                <p class="advantages-sublist-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages-sublist-item">
+                <h4 class="advantages-sublist-heading">Сувениры</h4>
+                <p class="advantages-sublist-text">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-heading">Там есть мост дьявола</h3>
+            <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img src="#" alt="Мост Дьявола: мост естественного образования в каньоне.">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-heading">Небольшая площадь</h3>
+            <p class="advantages-item-text">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-heading">Красивая дорога</h3>
+            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-heading">Мало туристов</h3>
+            <p class="advantages-item-text">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+        </ol>
+      </section>
+    </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
