--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
           </li>
         </ol>
       </section>
+      <section class="hotel-search">
+        <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
+        <p>Заинтересовались?</p>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button type="button">Поиск гостиницы в Седоне</button>
+      </section>
     </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
