--- a/catalog.html
+++ b/catalog.html
@@ -35,5 +35,37 @@
         <button class="header-button" type="button">Хочу сюда!</button>
       </nav>
     </header>
+    <footer class="page-footer">
+      <section class="subscribe">
+        <h3 class="subscribe-heading">Подпишитесь на рассылку</h3>
+        <p class="subscribe-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label class="visually-hidden" for="subscription-email">Email</label>
+          <input class="subscription-field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
+          <button class="subscription-button" type="submit">Подписаться</button>
+        </form>
+      </section>
+      <ul class="networks-list">
+        <li class="networks-list-item">
+          <a href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">ВКонтакте</span>
+          </a>
+        </li>
+        <li class="networks-list-item">
+          <a href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Telegram</span>
+          </a>
+        </li>
+        <li class="networks-list-item">
+          <a href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Youtube</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a clas="academy-logo" href="#">
+        <img src="#" alt="Логотип HTML Academy.">
+      </a>
+    </footer>
   </body>
 </html>
