Добавляет ссылку на Академию

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </li>
       </ul>
       <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a clas="academy-logo" href="#">
+      <a clas="academy-logo" href="https://htmlacademy.ru/">
         <img src="#" alt="Логотип HTML Academy.">
       </a>
     </footer>
