--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-      <img src="#" alt="Логотип: Welcome to the gorgeous Sedona. Because the Grand Canyon sucks.">
+      <img src="#" alt="Welcome to the gorgeous Sedona. Цитата: Because the Grand Canyon sucks.">
       <p class="promo-tagline">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
