Изменяет класс для ссылки Подробнее в карточке товара

--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 4000 ₽</p>
-          <a class="more-link" href="#">Подробнее</a>
+          <a class="hotel-card-more-link" href="#">Подробнее</a>
           <a class="button button-blue favorites-button" href="#">В избранное</a>
           <div class="hotel-star-count hotel-four-stars">
             <span class="visually-hidden">4 звезды</span>
@@ -116,7 +116,7 @@
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 5000 ₽</p>
-          <a class="more-link" href="#">Подробнее</a>
+          <a class="hotel-card-more-link" href="#">Подробнее</a>
           <a class="button button-blue favorites-button-active" href="#">В избранном</a>
           <div class="hotel-star-count hotel-four-stars">
             <span class="visually-hidden">4 звезды</span>
@@ -130,7 +130,7 @@
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 2500 ₽</p>
-          <a class="more-link" href="#">Подробнее</a>
+          <a class="hotel-card-more-link" href="#">Подробнее</a>
           <a class="button button-blue favorites-button" href="#">В избранное</a>
           <div class="hotel-star-count hotel-three-stars">
             <span class="visually-hidden">3 звезды</span>
@@ -144,7 +144,7 @@
           </a>
           <p class="hotel-card-type">Гостиница</p>
           <p class="hotel-card-price">От 1500 ₽</p>
-          <a class="more-link" href="#">Подробнее</a>
+          <a class="hotel-card-more-link" href="#">Подробнее</a>
           <a class="button button-blue favorites-button" href="#">В избранное</a>
           <div class="hotel-star-count hotel-two-stars">
             <span class="visually-hidden">2 звезды</span>
