--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="#" alt="Логотип City of Sedona.">
+      <a class="logo-header" href="index.html">
+        <img src="#" alt="Логотип City of Sedona.">
+      </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -19,22 +21,14 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list user-navigation">
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
-              <span class="favorites-count">12</span>
-            </a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link user-navigation-button" href="#">Хочу сюда!</a>
-          </li>
-        </ul>
+        <a class="navigation-link" href="#">
+          <span class="visually-hidden">Поиск</span>
+        </a>
+        <a class="navigation-link" href="#">
+          <span class="visually-hidden">Избранное</span>
+          <span class="favorites-count">12</span>
+        </a>
+        <a class="button button-brown header-button" href="#">Хочу сюда!</a>
       </nav>
     </header>
     <main class="main-index">
