--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
         <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button type="button">Поиск гостиницы в Седоне</button>
+        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</a>
       </section>
     </main>
     <footer class="page-footer">
