--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
       <img src="#" alt="Welcome to the gorgeous Sedona. Цитата: Because the Grand Canyon sucks.">
-      <p class="promo-tagline">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <!-- Add class to p below -->
+        <p class="promo-tagline">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
           <li class="advantages-item">
@@ -83,7 +82,7 @@
         <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
         <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</a>
+        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</button>
       </section>
     </main>
     <footer class="page-footer">
