--- a/catalog.html
+++ b/catalog.html
@@ -74,7 +74,17 @@
               Апартаменты
             </label>
           </fieldset>
-          <!-- тут будет стоимость -->
+          <fieldset class="hotel-filter-group">
+            <legend class="hotel-filter-title">Стоимость, ₽:</legend>
+            <label>
+              от
+              <input type="number" name="price-min" value="0">
+            </label>
+            <label>
+              до
+              <input type="number" name="price-min" value="9000">
+            </label>
+          </fieldset>
           <button class="button button-blue filter-submit-button" type="submit">Применить</button>
           <button class="filter-reset-button" type="reset">Сбросить</button>
         </form>
