--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
         <p>Заинтересовались?</p>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</button>
+        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</a>
       </section>
     </main>
     <footer class="page-footer">
@@ -113,7 +113,7 @@
         </li>
       </ul>
       <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      <a clas="academy-logo" href="https://htmlacademy.ru/">
+      <a class="academy-logo" href="https://htmlacademy.ru/">
         <img src="#" alt="Логотип HTML Academy.">
       </a>
     </footer>
