--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="page-header">
       <a class="logo-header" href="index.html">
-        <img src="#" alt="Логотип City of Sedona.">
+        <img src="images/logo.svg" width="139" height="70" alt="Логотип City of Sedona.">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -107,7 +107,7 @@
         </a>
         <article class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotels/hotel-1.jpg" width="300" height="211" alt="Каньон и звездное небо.">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -121,7 +121,7 @@
         </article>
         <article class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotels/hotel-2.jpg" width="300" height="211" alt="Каньон на горизонте, облачное небо и радуга.">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -135,7 +135,7 @@
         </article>
         <article class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotels/hotel-3.jpg" width="300" height="211" alt="Каньон на фоне ясного неба.">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -149,7 +149,7 @@
         </article>
         <article class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="">
+            <img class="hotel-card-image" src="images/hotels/hotel-4.jpg" width="300" height="211" alt="Каньон на горизонте на фоне звездного неба.">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <p class="hotel-card-type">Гостиница</p>
@@ -220,7 +220,7 @@
       </ul>
       <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
       <a class="academy-logo" href="https://htmlacademy.ru/">
-        <img src="#" alt="Логотип HTML Academy.">
+        <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Academy.">
       </a>
     </footer>
   </body>
