Добавляет базовую стилизацию главной страницы

--- a/index.html
+++ b/index.html
@@ -28,69 +28,72 @@
         </a>
         <a class="navigation-link" href="#">
           <span class="visually-hidden">Избранное</span>
-          <span class="favorites-count">12</span>
+          <div class="favorites-count-circle">
+            <span class="favorites-count">12</span>
+          </div>
         </a>
-        <a class="button button-brown header-button" href="#">Хочу сюда!</a>
+        <a class="button header-button" href="#">Хочу сюда!</a>
       </nav>
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
       <img src="images/content/welcome.svg" alt="Welcome to the gorgeous Sedona. Цитата: Because the Grand Canyon sucks.">
       <section class="advantages">
-        <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="promo-tagline">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 class="main-heading">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p class="main-paragraph">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-item-heading">Настоящий городок</h3>
-            <p class="advantages-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <div class="advantages-main-item">
+              <h3 class="advantages-item-heading">Настоящий городок</h3>
+              <p class="advantages-item-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
             <img src="images/content/photo-1.jpg" width="800" height="384" alt="Городок Седона: двухэтажные здания.">
             <ul class="advantages-sublist">
-              <li class="advantages-sublist-item">
-                <h4 class="advantages-sublist-heading">Жильё</h4>
-                <p class="advantages-sublist-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <li class="advantages-item advantages-item-lightblue">
+                <h4 class="advantages-item-heading">Жильё</h4>
+                <p class="advantages-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
-              <li class="advantages-sublist-item">
-                <h4 class="advantages-sublist-heading">Еда</h4>
-                <p class="advantages-sublist-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <li class="advantages-item">
+                <h4 class="advantages-item-heading">Еда</h4>
+                <p class="advantages-item-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages-sublist-item">
-                <h4 class="advantages-sublist-heading">Сувениры</h4>
-                <p class="advantages-sublist-text">Не только китайского, но и настоящего местного производства!</p>
+              <li class="advantages-item advantages-item-lightblue">
+                <h4 class="advantages-item-heading">Сувениры</h4>
+                <p class="advantages-item-text">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-item-heading">Там есть мост дьявола</h3>
-            <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <div class="advantages-main-item">
+              <h3 class="advantages-item-heading">Там есть мост дьявола</h3>
+              <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
             <img src="images/content/photo-2.jpg" width="800" height="384" alt="Мост Дьявола: мост естественного образования в каньоне.">
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-lightblue">
             <h3 class="advantages-item-heading">Небольшая площадь</h3>
             <p class="advantages-item-text">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-blue">
             <h3 class="advantages-item-heading">Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            <p class="advantages-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-item-lightblue">
             <h3 class="advantages-item-heading">Мало туристов</h3>
             <p class="advantages-item-text">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
       <section class="hotel-search">
-        <!-- add classes below -->
-        <h3 class="visually-hidden">Поиск гостиницы в Седоне</h3>
-        <p>Заинтересовались?</p>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-brown button-hotel-search">Поиск гостиницы в Седоне</a>
+        <h3 class="main-heading">Заинтересовались?</h3>
+        <p class="main-paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-hotel-search">Поиск гостиницы в Седоне</a>
       </section>
     </main>
     <footer class="page-footer">
       <section class="subscribe">
-        <h3 class="subscribe-heading">Подпишитесь на рассылку</h3>
-        <p class="subscribe-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <h3 class="main-heading">Подпишитесь на рассылку</h3>
+        <p class="main-paragraph white-paragraph">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscription-email">Email</label>
           <input class="subscription-field" placeholder="Ваш e-mail" type="email" name="subscription-email" id="subscription-email" required>
