Исправляет названия классов

--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,9 @@
         </a>
         <a class="navigation-link" href="#">
           <span class="visually-hidden">Избранное</span>
-          <span class="favorites-count">12</span>
+          <div class="favorites-count-circle">
+            <span class="favorites-count">12</span>
+          </div>
         </a>
         <a class="button button-brown header-button" href="#">Хочу сюда!</a>
       </nav>
@@ -92,7 +94,7 @@
         </form>
       </section>
       <section class="hotel-catalog">
-        <p>Найдено гостиниц: <span class="hotel-count">38</span></p>
+        <p class="main-heading">Найдено гостиниц: <span class="hotel-count">38</span></p>
         <select class="sort-select" aria-label="Сортировка">
           <option value="cheap">Сначала дешёвые</option>
           <option value="expensive">Сначала дорогие</option>
