Добавляет aria-label для хлебных крошек

--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
     <main class="catalog">
       <header class="header-catalog">
         <h1 class="header-catalog-heading">Гостиницы Седоны</h1>
-        <nav class="breadcrumbs">
+        <nav class="breadcrumbs" aria-label="Хлебные крошки.">
           <a class="breadcrumbs-item" href="index.html">
              <span class="visually-hidden">Главная</span>
           </a>
