--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <section class="hotel-search">
           <h3 class="section-heading">Заинтересовались?</h3>
           <p class="main-paragraph">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="button button-hotel-search">Поиск гостиницы в Седоне</a>
+          <a class="button button-hotel-search" href="#">Поиск гостиницы в Седоне</a>
         </section>
       </main>
       <footer class="page-footer">
