--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <a class="navigation-link" href="catalog.html">Гостиницы</a>
               </li>
             </ul>
-            <a class="navigation-link navigation-icon-link" href="#">
+            <a class="navigation-link navigation-icon-link icon" href="#">
               <svg aria-hidden="true" focusable="false" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
-                <path d="M19.1585 18.05L15.448 14.35C16.4508 13.05 17.1528 11.35 17.1528 9.44995C17.1528 5.04995 13.5426 1.44995 9.13013 1.44995C4.71764 1.44995 1.10742 5.14995 1.10742 9.54995C1.10742 13.95 4.71764 17.55 9.13013 17.55C10.9352 17.55 12.6401 16.95 14.044 15.85L17.7545 19.55L19.1585 18.05ZM9.13013 15.55C5.82076 15.55 3.1131 12.85 3.1131 9.54995C3.1131 6.24995 5.82076 3.54995 9.13013 3.54995C12.4395 3.54995 15.1472 6.24995 15.1472 9.54995C15.1472 12.85 12.4395 15.55 9.13013 15.55Z" fill="black"/>
+                <path d="M19.1585 18.05L15.448 14.35C16.4508 13.05 17.1528 11.35 17.1528 9.44995C17.1528 5.04995 13.5426 1.44995 9.13013 1.44995C4.71764 1.44995 1.10742 5.14995 1.10742 9.54995C1.10742 13.95 4.71764 17.55 9.13013 17.55C10.9352 17.55 12.6401 16.95 14.044 15.85L17.7545 19.55L19.1585 18.05ZM9.13013 15.55C5.82076 15.55 3.1131 12.85 3.1131 9.54995C3.1131 6.24995 5.82076 3.54995 9.13013 3.54995C12.4395 3.54995 15.1472 6.24995 15.1472 9.54995C15.1472 12.85 12.4395 15.55 9.13013 15.55Z"/>
               </svg>
               <span class="visually-hidden">Поиск</span>
             </a>
-            <a class="navigation-link navigation-icon-link" href="#">
+            <a class="navigation-link navigation-icon-link icon" href="#">
               <svg aria-hidden="true" focusable="false" width="20" height="17" xmlns="http://www.w3.org/2000/svg">
-                <path d="M10.5766 17C10.2758 17 9.97493 16.9 9.77436 16.6C4.35903 10.5 3.05534 9.1 2.75449 8.7C2.0525 7.8 1.65137 6.6 1.65137 5.4C1.65137 2.4 4.05818 0 7.16698 0C8.47067 0 9.67407 0.5 10.6769 1.3C11.6797 0.5 12.9834 0 14.1868 0C17.1954 0 19.7025 2.4 19.7025 5.4C19.7025 6.7 19.201 7.9 18.3988 8.8L11.3789 16.7C11.1783 16.9 10.9778 17 10.5766 17ZM4.5596 7.5C4.86045 7.9 8.06953 11.5 10.6769 14.4L16.8945 7.4C17.3959 6.9 17.5965 6.2 17.5965 5.4C17.5965 3.6 16.0922 2.1 14.2871 2.1C13.2843 2.1 12.2815 2.6 11.5795 3.4C11.2786 3.7 10.9778 3.8 10.6769 3.8C10.3761 3.8 10.0752 3.6 9.87464 3.4C9.17265 2.6 8.16982 2.1 7.16698 2.1C5.36187 2.1 3.85761 3.6 3.85761 5.4C3.75733 6.3 4.15846 7 4.5596 7.5C4.45931 7.5 4.45931 7.5 4.5596 7.5Z" fill="black"/>
+                <path d="M10.5766 17C10.2758 17 9.97493 16.9 9.77436 16.6C4.35903 10.5 3.05534 9.1 2.75449 8.7C2.0525 7.8 1.65137 6.6 1.65137 5.4C1.65137 2.4 4.05818 0 7.16698 0C8.47067 0 9.67407 0.5 10.6769 1.3C11.6797 0.5 12.9834 0 14.1868 0C17.1954 0 19.7025 2.4 19.7025 5.4C19.7025 6.7 19.201 7.9 18.3988 8.8L11.3789 16.7C11.1783 16.9 10.9778 17 10.5766 17ZM4.5596 7.5C4.86045 7.9 8.06953 11.5 10.6769 14.4L16.8945 7.4C17.3959 6.9 17.5965 6.2 17.5965 5.4C17.5965 3.6 16.0922 2.1 14.2871 2.1C13.2843 2.1 12.2815 2.6 11.5795 3.4C11.2786 3.7 10.9778 3.8 10.6769 3.8C10.3761 3.8 10.0752 3.6 9.87464 3.4C9.17265 2.6 8.16982 2.1 7.16698 2.1C5.36187 2.1 3.85761 3.6 3.85761 5.4C3.75733 6.3 4.15846 7 4.5596 7.5C4.45931 7.5 4.45931 7.5 4.5596 7.5Z"/>
               </svg>
               <span class="visually-hidden">Избранное</span>
               <div class="favorites-count-circle">
@@ -68,17 +68,17 @@
                 <li class="advantages-item advantages-item-lightblue advantages-subitem">
                   <img aria-hidden="true" focusable="false" src="images/icons/advantages/housing.svg">
                   <h4 class="advantages-item-heading">Жильё</h4>
-                  <p class="advantages-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  <p class="advantages-item-text">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
                 </li>
                 <li class="advantages-item advantages-subitem">
                   <img aria-hidden="true" focusable="false" src="images/icons/advantages/food.svg">
                   <h4 class="advantages-item-heading">Еда</h4>
-                  <p class="advantages-item-text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+                  <p class="advantages-item-text">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="advantages-item advantages-item-lightblue advantages-subitem">
                   <img aria-hidden="true" focusable="false" src="images/icons/advantages/souvenirs.svg">
                   <h4 class="advantages-item-heading">Сувениры</h4>
-                  <p class="advantages-item-text">Не только китайского, но и настоящего местного производства!</p>
+                  <p class="advantages-item-text">Не только китайского,<br>но и настоящего местного производства!</p>
                 </li>
               </ul>
             </li>
@@ -90,17 +90,17 @@
               </div>
               <img src="images/content/photo-2.jpg" width="800" height="384" alt="Мост Дьявола: мост естественного образования в каньоне.">
             </li>
-            <li class="advantages-item advantages-item-lightblue">
+            <li class="advantages-item advantages-item-lightblue advantages-item-last-row">
               <h3 class="advantages-item-heading">Небольшая площадь</h3>
               <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;3 —</span>
               <p class="advantages-item-text">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item advantages-item-blue">
+            <li class="advantages-item advantages-item-blue advantages-item-last-row">
               <h3 class="advantages-item-heading">Красивая<br>дорога</h3>
               <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;4 —</span>
               <p class="advantages-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages-item advantages-item-lightblue">
+            <li class="advantages-item advantages-item-lightblue advantages-item-last-row">
               <h3 class="advantages-item-heading">Мало<br>туристов</h3>
               <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;5 —</span>
               <p class="advantages-item-text">Большинство едет в Гранд Каньон и толпится там</p>
@@ -123,28 +123,42 @@
             <button class="button button-blue subscription-button" type="submit">Подписаться</button>
           </form>
         </section>
-        <div class="content-container links-phone-footer">
-          <ul class="networks-list">
-            <li class="networks-list-item">
-              <a href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
-              </a>
-            </li>
-            <li class="networks-list-item">
-              <a href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Telegram</span>
-              </a>
-            </li>
-            <li class="networks-list-item">
-              <a href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Youtube</span>
-              </a>
-            </li>
-          </ul>
-          <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          <a class="academy-logo" href="https://htmlacademy.ru/">
-            <img src="images/logo-htmlacademy.svg" width="115" height="34" alt="Логотип HTML Academy.">
-          </a>
+        <div class="links-phone-footer">
+          <div class="content-container footer-container">
+            <ul class="networks-list">
+              <li class="networks-list-item">
+                <a class="network-icon-link" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">ВКонтакте</span>
+                  <svg class="network-icon" width="25" height="14" aria-hidden="true" focusable="false" viewBox="0 0 25 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.1164 0.948C24.2824 0.402 24.1164 0 23.3214 0H20.6964C20.0284 0 19.7204 0.347 19.5534 0.73C19.5534 0.73 18.2184 3.926 16.3274 6.002C15.7154 6.604 15.4374 6.795 15.1034 6.795C14.9364 6.795 14.6854 6.604 14.6854 6.057V0.948C14.6854 0.292 14.5014 0 13.9454 0H9.81738C9.40038 0 9.14938 0.304 9.14938 0.593C9.14938 1.214 10.0954 1.358 10.1924 3.106V6.904C10.1924 7.737 10.0394 7.888 9.70538 7.888C8.81538 7.888 6.65038 4.677 5.36538 1.003C5.11638 0.288 4.86438 0 4.19338 0H1.56638C0.816382 0 0.666382 0.347 0.666382 0.73C0.666382 1.412 1.55638 4.8 4.81138 9.281C6.98138 12.341 10.0364 14 12.8194 14C14.4884 14 14.6944 13.632 14.6944 12.997V10.684C14.6944 9.947 14.8524 9.8 15.3814 9.8C15.7714 9.8 16.4384 9.992 17.9964 11.467C19.7764 13.216 20.0694 14 21.0714 14H23.6964C24.4464 14 24.8224 13.632 24.6064 12.904C24.3684 12.18 23.5184 11.129 22.3914 9.882C21.7794 9.172 20.8614 8.407 20.5824 8.024C20.1934 7.533 20.3044 7.314 20.5824 6.877C20.5824 6.877 23.7824 2.451 24.1154 0.948H24.1164Z"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="networks-list-item">
+                <a class="network-icon-link" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Telegram</span>
+                  <svg class="network-icon" width="18" height="16" aria-hidden="true" focusable="false" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z"/>
+                  </svg>
+                </a>
+              </li>
+              <li class="networks-list-item">
+                <a class="network-icon-link" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                  <svg class="network-icon" width="23" height="18" aria-hidden="true" focusable="false" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.9402 0.5H3.50738C1.64668 0.5 0.333252 2.09375 0.333252 3.9V13.9937C0.333252 15.9062 1.64668 17.5 3.50738 17.5H19.1591C20.8009 17.5 22.3333 15.9062 22.3333 14.1V3.9C22.1143 2.09375 20.8009 0.5 18.9402 0.5ZM7.99494 13.0375V4.9625L15.3283 9L7.99494 13.0375Z"/>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+            <a class="footer-phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            <a class="academy-logo" href="https://htmlacademy.ru/">
+              <span class="visually-hidden">HTML Academy.</span>
+              <svg class="icon" aria-hidden="true" focusable="false" width="115" height="34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 13.9v2.6h2.5v-2.6H0ZM11.6 5.5c-1.6 0-2.8.7-3.6 1.7h-.1V1h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.8h-4.8V2.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.8h4.8v-2ZM41.1 5.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V5.8H29v10.6h2V11c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V1h-2v12.7ZM28.9 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 23c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V23ZM55.1 20.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V19.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V14.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 28l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
+              </svg>
+            </a>
+          </div>
         </div>
       </footer>
     </div>
