Добавляет сетку для количества элементов на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -234,7 +234,7 @@
                 <a class="pagination-link" href="#">10</a>
               </li>
             </ul>
-            <div>
+            <div class="hotel-number-view-on-page">
               <label class="hotel-number-view" for="hotel-number-on-page">Гостиниц на странице:</label>
               <select class="hotel-number-view-select" id="hotel-number-on-page">
               <option value="4">4</option>
