--- a/index.html
+++ b/index.html
@@ -162,5 +162,63 @@
         </div>
       </footer>
     </div>
+    <div class="modal-container modal-container-close">
+      <div class="modal">
+        <div class="modal-header">
+          <button class="modal-close-button">
+            <span class="visually-hidden">Закрыть.</span>
+            <svg class="modal-close-button-svg" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M13 1.2L11.8 0L6.5 5.3L1.2 0L0 1.2L5.3 6.5L0 11.8L1.2 13L6.5 7.7L11.8 13L13 11.8L7.7 6.5L13 1.2Z"/>
+            </svg>
+          </button>
+          <section class="modal-content">
+            <h2 class="section-heading modal-heading">Поиск гостиницы в Седоне</h2>
+          </section>
+        </div>
+        <form class="hotel-form" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="field-label">
+            <label class="form-label" for="checkin-date">Дата заезда:</label>
+            <input class="field field-calendar" type="text" id="checkin-date" placeholder="27 апреля 2020">
+          </div>
+          <span class="field-tip warning">Мы не можем отправить вас в прошлое.</span>
+          <div class="field-label">
+            <label class="form-label" for="checkout-date">Дата выезда:</label>
+            <input class="field field-calendar" type="text" id="checkout-date" placeholder="1 сентября 2021">
+          </div>
+          <span class="field-tip">На эти даты есть свободные номера. Пока есть.</span>
+          <div class="person-count">
+            <div class="field-label adults-field-label">
+              <label class="form-label" for="adults-count">Взрослые:</label>
+              <button class="person-count-button button-minus" type="button">
+                <svg class="person-count-button-svg" width="13" height="1" viewBox="0 0 13 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 0L0 1L13 1V0L0 0Z"/>
+                </svg>
+              </button>
+              <input class="person-count-field" type="number" id="adults-count" placeholder="2">
+              <button class="person-count-button button-plus" type="button">
+                <svg class="person-count-button-svg" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13 6H7V0H6V6H0V7H6V13H7V7H13V6Z"/>
+                  </svg>
+              </button>
+            </div>
+            <div class="field-label children-field-label">
+              <label class="form-label" for="adults-count">Дети:</label>
+              <button class="person-count-button button-minus" type="button">
+                <svg class="person-count-button-svg" width="13" height="1" viewBox="0 0 13 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path  d="M0 0L0 1L13 1V0L0 0Z"/>
+                </svg>
+              </button>
+              <input class="person-count-field children-count-field" type="number" id="children-count" placeholder="1">
+              <button class="person-count-button button-plus" type="button">
+                <svg class="person-count-button-svg" width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M13 6H7V0H6V6H0V7H6V13H7V7H13V6Z"/>
+                  </svg>
+              </button>
+            </div>
+          </div>
+          <button class="find-button button button-blue">Найти</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
