Добавляет звезды к отелям

--- a/catalog.html
+++ b/catalog.html
@@ -190,7 +190,7 @@
                 <p class="hotel-card-options">От 4000 ₽</p>
                 <a class="button hotel-card-more-link" href="#">Подробнее</a>
                 <a class="button button-blue favorites-button" href="#">В избранное</a>
-                <div class="hotel-star-count hotel-four-stars">
+                <div class="hotel-four-stars">
                   <span class="visually-hidden">4 звезды</span>
                 </div>
                 <p class="hotel-rating">Рейтинг: 8,5</p>
@@ -206,7 +206,7 @@
                 <p class="hotel-card-options">От 5000 ₽</p>
                 <a class="button hotel-card-more-link" href="#">Подробнее</a>
                 <a class="button button-blue favorites-button favorites-button-active" href="#">В избранном</a>
-                <div class="hotel-star-count hotel-four-stars">
+                <div class="hotel-four-stars">
                   <span class="visually-hidden">4 звезды</span>
                 </div>
                 <p class="hotel-rating">Рейтинг: 9,2</p>
@@ -222,7 +222,7 @@
                 <p class="hotel-card-options">От 2500 ₽</p>
                 <a class="button hotel-card-more-link" href="#">Подробнее</a>
                 <a class="button button-blue favorites-button" href="#">В избранное</a>
-                <div class="hotel-star-count hotel-three-stars">
+                <div class="hotel-three-stars">
                   <span class="visually-hidden">3 звезды</span>
                 </div>
                 <p class="hotel-rating">Рейтинг: 6,9</p>
@@ -238,7 +238,7 @@
                 <p class="hotel-card-options">От 1500 ₽</p>
                 <a class="button hotel-card-more-link" href="#">Подробнее</a>
                 <a class="button button-blue favorites-button" href="#">В избранное</a>
-                <div class="hotel-star-count hotel-two-stars">
+                <div class="hotel-two-stars">
                   <span class="visually-hidden">2 звезды</span>
                 </div>
                 <p class="hotel-rating">Рейтинг: 5,0</p>
