Исправляет ошибки валидации

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
           <nav class="navigation">
             <ul class="navigation-list">
               <li class="navigation-item">
-                <a class="navigation-link" href="index.html" href="index.html">Главная</a>
+                <a class="navigation-link" href="index.html">Главная</a>
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="#">О Седоне</a>
@@ -156,14 +156,14 @@
                     <path d="M10 8H6V14H10V8Z" fill="black"/>
                   </svg>
                 </a>
-                <a href="#" class="view-button" href="#">
+                <a class="view-button" href="#">
                   <span class="visually-hidden">Вид отображения: карточки</span>
                   <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16 12H0V14H16V12Z" fill="black"/>
                     <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
                   </svg>
                 </a>
-                <a href="#" class="view-button" href="#">
+                <a class="view-button" href="#">
                   <span class="visually-hidden">Вид отображения: список</span>
                   <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 0H0V2H2V0Z" fill="black"/>
