--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
               </div>
               <ul class="advantages-sublist">
                 <li class="advantages-item advantages-item-lightblue advantages-subitem">
-                  <img aria-hidden="true" focusable="false" src="images/icons/advantages/housing.svg">
+                  <div class="advantages-item-image-housing"></div>
                   <h4 class="advantages-item-heading">Жильё</h4>
                   <p class="advantages-item-text">Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
                 </li>
                 <li class="advantages-item advantages-subitem">
-                  <img aria-hidden="true" focusable="false" src="images/icons/advantages/food.svg">
+                  <div class="advantages-item-image-food"></div>
                   <h4 class="advantages-item-heading">Еда</h4>
                   <p class="advantages-item-text">Всегда заказывайте<br>топовый фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="advantages-item advantages-item-lightblue advantages-subitem">
-                  <img aria-hidden="true" focusable="false" src="images/icons/advantages/souvenirs.svg">
+                  <div class="advantages-item-image-souvenirs"></div>
                   <h4 class="advantages-item-heading">Сувениры</h4>
                   <p class="advantages-item-text">Не только китайского,<br>но и настоящего местного производства!</p>
                 </li>
@@ -85,24 +85,24 @@
             <li class="advantages-main-item advantages-item-bridge">
               <div class="advantages-item">
                 <h3 class="advantages-item-heading">Там есть<br>мост дьявола</h3>
-                <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;2 —</span>
+                <span class="advantages-item-number" aria-hidden="true">— &numero;2 —</span>
                 <p class="advantages-item-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img src="images/content/photo-2.jpg" width="800" height="384" alt="Мост Дьявола: мост естественного образования в каньоне.">
             </li>
             <li class="advantages-item advantages-item-lightblue advantages-item-last-row">
               <h3 class="advantages-item-heading">Небольшая площадь</h3>
-              <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;3 —</span>
+              <span class="advantages-item-number" aria-hidden="true">— &numero;3 —</span>
               <p class="advantages-item-text">Все достопримечательности находятся очень близко</p>
             </li>
             <li class="advantages-item advantages-item-blue advantages-item-last-row">
               <h3 class="advantages-item-heading">Красивая<br>дорога</h3>
-              <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;4 —</span>
+              <span class="advantages-item-number" aria-hidden="true">— &numero;4 —</span>
               <p class="advantages-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages-item advantages-item-lightblue advantages-item-last-row">
               <h3 class="advantages-item-heading">Мало<br>туристов</h3>
-              <span class="advantages-item-number" aria-hidden="true" focusable="false">— &numero;5 —</span>
+              <span class="advantages-item-number" aria-hidden="true">— &numero;5 —</span>
               <p class="advantages-item-text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ol>
