Добавляет размеры для изображения

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <main class="main-index main-container">
         <div class="start-screen">
         <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
-        <img class="start-motto" src="images/content/welcome.svg" alt="Welcome to the gorgeous Sedona. Цитата: Because the Grand Canyon sucks.">
+        <img class="start-motto" width="458" height="352" src="images/content/welcome.svg" alt="Welcome to the gorgeous Sedona. Цитата: Because the Grand Canyon sucks.">
         </div>
         <section>
           <div class="advantages-section">
